# CS180-Project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dramatiq.sh  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  test.yaml
Search_cloud_API/: AI_summary_code.py  AI_summary_code.txt  Search_engine_code.py
Smart_Search_Server_Flask/: SmartSearchJsonFunction.py  smart_search_flask.py  smart_search_flask.txt
accounts/: tests.py  urls.py  views.py
accounts/templates/accounts/: profile.html  signup.html
core/: urls.py  views.py
core/static/core/: _card_preview.css  base.css  card_confirm_delete.css  card_detail.css  card_form.css  card_update_form.css  create.css  deck-detail.css  deck-list.css  deck_confirm_delete.css  deck_form.css  home.css  instructions.css  login.css  navbar.css  quiz-list.css  quiz.css  reviews.css  shared.css  signup.css
core/templates/core/: create.html  index.html
decks/: models.py  tests.py  urls.py  views.py
decks/migrations/: 0001_initial.py  0002_deck_description_deck_published.py  0003_card_difficulty_card_due_card_last_reviewed_and_more.py  0003_card_due_card_fsrs.py
decks/templates/decks/: _card_preview.html  _deck_card.html  _deck_list.html  card_confirm_delete.html  (+8 more)
flashcards/: asgi.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  urls.py
quiz/: consumers.py  models.py  routing.py  tasks.py  tests.py  urls.py  views.py
quiz/migrations/: 0001_initial.py  0002_quiz_index.py  0003_quiz_review_limit_quiz_seconds_per_card.py  0004_alter_quiz_seconds_per_card.py  0005_quiz_users_quizresponse.py
reviews/: consumers.py  routing.py  tests.py  urls.py  views.py
templates/: base.css  base.html
templates/registration/: login.html
website/: home.html  index.css  index.html  loginnavigation.js  logoutnavigation.js
(+7 files in other folders)
