[project]
name = "triviatrek"
version = "0.0.1"
dependencies = ["Django", "mypy", "django-stubs", "djlint"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flashcards", "core", "accounts", "decks", "quiz"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
explicit_package_bases = true
check_untyped_defs = true
enable_error_code = "explicit-override"

[tool.django-stubs]
django_settings_module = "flashcards.settings"

[tool.djlint]
profile = "django"