[project]
name = "triviatrek"
version = "0.0.1"
dependencies = [
    "Django",
    "flask",
    "nltk",
    "praw",
    "mypy",
    "django-stubs",
    "djlint",
    "channels[daphne]",
    "channels_redis",
    "dramatiq[redis, watch]",
    "django-dramatiq",
    "django-environ",
    "mysqlclient",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flashcards", "core", "accounts", "decks", "quiz"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
explicit_package_bases = true
check_untyped_defs = true
follow_untyped_imports = true
enable_error_code = "explicit-override"
exclude = "^build/"


[tool.django-stubs]
django_settings_module = "flashcards.settings"

[tool.djlint]
profile = "django"
